--- a/src/presentation/components/MenuHamburguesa/MenuHamburguesa.scss
+++ b/src/presentation/components/MenuHamburguesa/MenuHamburguesa.scss
@@ -5,6 +5,7 @@
   position: fixed;
   left: 0;
   top: 50px;
+  z-index: 10000000;
 
   .contenedor-menu-hamburguesa {
     width: 100%;
