--- a/src/presentation/components/SecondaryComponents/Gallery/EstructuraImagenPerfiles.scss
+++ b/src/presentation/components/SecondaryComponents/Gallery/EstructuraImagenPerfiles.scss
@@ -1,4 +1,4 @@
-.seccion-perfil-inicio-2 {
+.seccion-perfil-inicio {
   width: 100%;
   max-width: 1400px;
   margin: 0 auto;
